...
    <string name="title_activity_enviornmental_check">EnviornmentalCheckActivity</string>
    <string name="title_activity_display_item">Issue details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_logout_key">pref_logout</string>
    <string name="pref_logout_label">Log Out</string>
...

    <!--for views-->
    <string name="service_request_button">Request Service</string>

    <!--preset issue descriptions-->
...
    <string name="logging_in_message">Logging in..&#8230;.</string>
    <string name="sign_up_fb">Sign up with facebook</string>
    <string name="log_in_button">LOG IN</string>
    <string name="log_in_fb">Log in with Facebook</string>
    <string name="sign_up_button">SIGN UP</string>
...
    <string name="generic_error">An error occurred, please try again</string>
    <string name="finalize_button">FINALIZE PROFILE</string>
    <string name="invalid_credentials_error">Invalid username/password</string>
    <string name="facebook_login_error">An error occurred, please try again later</string>
    <string name="update_fail_error">Update failed. Please contact us at info@getpitstop.io.</string>
...
    <string name="forgot_password_dialog_title">Reset Password</string>
    <string name="forgot_password_dialog_message">Please enter your email address</string>
    <string name="ok_button">OK</string>
    <string name="email_sent_message">An email has been sent to %s with further instructions. It may take up to a few minutes to arrive.</string>
    <string name="first_name_hint">First Name</string>
...
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="forgot_password_button">Forgot password?</string>


...
    <!--Scan-->
    <string name="scan_failed_disconnected">Please connect to your vehicle device to scan</string>
    <string name="scan">Scan</string>
    <string name="scan_historical_message">We have found a lot of historical car data.
        Engine issues may take longer than usual to load.</string>
...
    <string name="congrats">Congrats!</string>
    <string name="book_tentative_appointment">Book Tentative Appointment</string>
    <string name="update_mileage">Update Mileage</string>
    <string name="getting_vin">Retrieving VIN</string>
    <string name="no_date">No date</string>
...
    <string name="upcoming_services">Upcoming</string>
    <string name="current_services">Current</string>
    <string name="history_services">History</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_confirm_message">Are you sure you want to log out?</string>
...
    <string name="request_search_failed_add_car_message">Unable to start add car process with a device, please make sure your locations permissions are enabled.</string>
    <string name="sign_in_with_facebook">Sign In With Facebook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="pitstop_splash_description">Your car will be healthier, and driving will be safer.</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_password_hint">Enter a password (min 8 characters)</string>
    <string name="confirm_password">Confirm Password</string>
...
