<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_car_root">

    <LinearLayout
        android:id="@+id/add_car_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
...
                    android:layout_height="wrap_content"
                    android:textOn="@string/yes_button_text"
                    android:textOff="@string/yes_button_text"
                    android:checked="true"/>

                <ToggleButton
                    android:id="@+id/no_i_dont_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/no_button_text"
                    android:textOff="@string/no_button_text"
                    android:checked="false" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:layout_marginTop="16dp"
                android:visibility="visible"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
...

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/mileage"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="VIN"
                        android:id="@+id/textView31"
                        android:layout_marginRight="16dp" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
...
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_for_car"
                    android:id="@+id/button"
                    android:layout_alignParentTop="true"
                    android:onClick="searchForCar"
                    android:layout_centerHorizontal="true"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="16dp"
                    android:background="@drawable/color_button_primary"
...
