...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/TextInputTheme"
                android:visibility="gone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#dedede"
                    android:ems="10"
                    android:hint="@string/first_name_hint"
                    android:maxLines="1"
                    android:inputType="text"
                    android:textColor="#efefef"
                    android:textColorHint="#dedede"
                    android:theme="@style/TextInputTheme"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/lastName"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastNameLayout"
                android:layout_width="match_parent"
...
                    android:maxLines="1"
                    android:textColor="#efefef"
                    android:textColorHint="#dedede"
                    android:textIsSelectable="false"
                    android:theme="@style/TextInputTheme"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/phone"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
...
                android:theme="@style/TextInputTheme"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:background="@drawable/color_button_highlight"
            android:elegantTextHeight="true"
...
            android:id="@+id/fb_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <Button
            android:id="@+id/forgot_password"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:onClick="forgotPassword"
            android:text="@string/forgot_password_button"
            android:textAllCaps="false"
            android:textColor="#fff"/>

    </LinearLayout>

    <Button
        android:id="@+id/sign_log_switcher_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="6dp"
...
