<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppNoActionBarTheme"
    android:id="@+id/splash_layout"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/log_in_sign_up_container"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:id="@+id/radio_layout"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textColor="#fff"
            android:textColorHighlight="#fff"
            android:textColorHint="#fff"
            android:buttonTint="#fff"
            style="@android:style/Widget.DeviceDefault.CompoundButton.RadioButton" />

        <RadioButton
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:id="@+id/radioButton"
            android:textColorHint="#fff"
            android:textColorHighlight="#fff"
            android:textColor="#fff"
            android:buttonTint="#fff"
            style="@android:style/Widget.DeviceDefault.CompoundButton.RadioButton" />

        <RadioButton
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:id="@+id/radioButton2"
            android:textColorHint="#fff"
            android:textColorHighlight="#fff"
            android:textColor="#fff"
            android:buttonTint="#fff"
            style="@android:style/Widget.DeviceDefault.CompoundButton.RadioButton" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/log_in_sign_up_container"
        android:weightSum="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Log In"
            android:id="@+id/log_in_skip"
            android:background="@drawable/color_button_rectangle_primary_dark"
            android:layout_weight="1"
            android:textColor="#fff"
            android:typeface="normal"
            android:textStyle="bold"
            android:onClick="goToLogin" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:id="@+id/sign_up_skip"
            android:background="@drawable/color_button_rectangle_primary"
            android:layout_weight="1"
            android:textColor="#fff"
            android:typeface="normal"
            android:textStyle="bold"
            android:onClick="goToLogin" />
    </LinearLayout>

</RelativeLayout>
